Bug 165800 - Locking down proxy server settings does not work
Summary: Locking down proxy server settings does not work
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.3
Keywords:
Depends on:
Blocks: UI-Lockdown
  Show dependency treegraph
 
Reported: 2025-03-18 09:51 UTC by Gabor Kelemen (Collabora)
Modified: 2025-03-19 13:15 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Example file locking down 1 key - does not work (408 bytes, application/xml)
2025-03-18 09:51 UTC, Gabor Kelemen (Collabora)
Details
Proxy server setting can be changed after placing the lockdown config (16.63 KB, image/png)
2025-03-18 09:53 UTC, Gabor Kelemen (Collabora)
Details
Example file locking down 2 keys - does not work (559 bytes, application/xml)
2025-03-18 09:55 UTC, Gabor Kelemen (Collabora)
Details
Proxy server setting can be changed after placing the second lockdown config, HTTP setting is now locked (10.85 KB, image/png)
2025-03-18 10:03 UTC, Gabor Kelemen (Collabora)
Details
Example file locking down all 6 keys (1.14 KB, application/xml)
2025-03-18 10:06 UTC, Gabor Kelemen (Collabora)
Details
Proxy server setting appears locked after placing the third lockdown config (20.24 KB, image/png)
2025-03-18 10:07 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2025-03-18 09:51:56 UTC
Created attachment 199861 [details]
Example file locking down 1 key - does not work

Attached xcd file is supposed to lock down the proxy server selection to the "System" value.
However this does not put the setting to the locked state on the UI, that happens only when all other proxy settings are also locked down.

1. Place the attached Z473_1key.xcd file into the share/registry folder of an LO install
2. Go to Options - Internet - Proxy 
-> The Proxy server setting can still be changed

3. Remove the example file from share/registry 
4. Place the second attachment Z473_2key.xcd to share/registry 
5. Go to Options - Internet - Proxy 
-> The Proxy server setting can still be changed, the HTTP proxy is locked down

6. Remove the second example file from share/registry
7. Place the third attachment Z473_6key.xcd to share/registry 
8. Go to Options - Internet - Proxy 
-> The Proxy server setting is locked down and all other settings are locked down


Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 6e8a094a1a1d63ed2684900c5e0c4292f8d833a8
CPU threads: 14; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2025-03-18 09:53:03 UTC
Created attachment 199862 [details]
Proxy server setting can be changed after placing the lockdown config
Comment 2 Gabor Kelemen (Collabora) 2025-03-18 09:55:43 UTC
Created attachment 199863 [details]
Example file locking down 2 keys - does not work
Comment 3 Gabor Kelemen (Collabora) 2025-03-18 10:03:59 UTC
Created attachment 199864 [details]
Proxy server setting can be changed after placing the second lockdown config, HTTP setting is now locked
Comment 4 Gabor Kelemen (Collabora) 2025-03-18 10:06:34 UTC
Created attachment 199865 [details]
Example file locking down all 6 keys
Comment 5 Gabor Kelemen (Collabora) 2025-03-18 10:07:06 UTC
Created attachment 199866 [details]
Proxy server setting appears locked after placing the third lockdown config
Comment 6 Commit Notification 2025-03-18 17:58:52 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a8ce824a210f6300be4275283518a442737b2e77

tdf#165800 - fix locking down proxy server settings

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2025-03-19 13:15:10 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/b26beb11171ab0807f6f5876990c9d0e85977679

tdf#165800 - fix locking down proxy server settings

It will be available in 25.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.