tdf#165800 - fix locking down proxy server settings

We used wrong config key for lock/unlock Proxy
Server settings.

Change-Id: I2e49b5d3494e04197ea90a6d066c9690b12cc0ad
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183068
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Jenkins
(cherry picked from commit a8ce824a210f6300be4275283518a442737b2e77)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183100
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>